--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ header img{
 .featFlex img{
     height:200px;
 }
-.featuredHeading {
+.subHeading {
     font-family:monsterrat-bold;
     margin:40px;
     font-size: 25px;
@@ -242,3 +242,181 @@ header img{
     font-family:montserrat; 
 }
 /*Featured End*/
+
+/*categories*/
+
+.category1 img{
+    width:400px;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+.category2 img{
+    width:400px;
+}
+.category3 img{
+    width:400px;
+}
+.category1,
+.category2,
+.category3{
+    display: flex;
+    gap: 30px;
+    margin-top: -100px;
+    margin-bottom: -170px;
+}
+.category1 img{
+    width: 475px;
+}
+.category2 img{
+    width:600px;
+}
+.category3 img{
+    width:475px;
+}
+.catHeading{
+    font-size: 23px;
+    font-weight: bold;
+    font-style: italic;
+}
+.written{
+    display:flex;
+    gap: 20px;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.categoriesSection{
+    margin-left:100px;
+    margin-right: 100px;
+    height:1080px;
+}
+.bgimg{
+    position: relative;
+    top: 0;
+    left: 0;
+}
+.categoriesSection button{
+    background-color: #7B4FFE;
+    color: #fafafa;
+    border: none;
+    height:40px;
+    width:120px;
+    border-radius: 10px;
+    font-weight: bold;
+    padding: 6px 15px;
+    border-radius: 5px;
+    font-size: 15px;
+    font-family:montserrat; 
+}
+
+/*categories end*/
+
+/*Newsletter Section*/
+
+.newsLetter{
+    background-color: #F5DEE7;
+    width: 100%;
+    height: 270px;
+    align-items: center;
+    display:flex;
+    flex-direction: column;
+}
+
+.nLetterHead{
+    font-family:monsterrat-bold ;
+    font-size: 38px;
+    margin-top:50px;
+    font-weight: 700;
+    text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.10);
+}
+
+.nLetterHead span{
+    color:#7B4FFE;
+    font-style: italic;
+}
+
+.nlbody{
+    font-size: 14px;
+    margin-top: 15px;
+    width:600px;
+    text-align: center;
+    font-weight: 550;
+}
+
+.nlEmail{
+    background-color: #fafafa;
+    border-radius: 10px;
+    display:flex;
+    align-items: center;
+}
+
+.nlEmail input{
+    height: 30px;
+    width: 500px;
+    border-radius: 10px;
+    border: none;
+    font-family: montserrat;
+}
+
+.nlEmail input:focus{
+    border:none;
+    outline:none;
+}
+.nlEmail img{
+    height:25px;
+    margin-right:6px;
+}
+
+/*Newsletter End*/
+
+/*Footer*/
+
+.flexMain{
+    display:flex;
+    gap: 150px;
+    margin: 80px;
+    margin-bottom: 0;
+    justify-content: center;
+}
+
+.flexOne img{
+    height: 50px;
+}
+.flexOne p{
+    font-size: 14px;
+    margin-top: 15px;
+    width:400px;
+    font-weight: 550;
+}
+
+.socialMediaIcons img{
+    height:40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.footerHead{
+    font-size: 14px;
+    margin-top: 15px;
+    font-weight: 700;
+    color:#7B4FFE;
+    margin-bottom: 20px;
+}
+
+.footerPoints p{
+    font-size: 14px;
+    margin: 10px;
+    margin-left:0px;
+}
+
+.footerFinal{
+    height:60px;
+}
+.footerFinal p{
+    text-align: center;
+    font-size: 12px;
+}
+
+/*Footer End*/
